# FPL-Predictor

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  scheduled-refresh.yml
Build progress/: README.md
apps/api/: main.py
apps/web/: package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: current-gameweek-view.tsx  customizable-future-fixture-card.tsx  fixture-card.tsx  fixtures-week-view.tsx  history-browser.tsx  history-week-view.tsx  postponed-fixtures-view.tsx  predictions-browser.tsx  site-footer.tsx  site-nav.tsx
apps/web/lib/: backend-api.ts  dashboard.ts  gameweek.ts  lineup.ts
data/: matches.csv  players.csv  sync_state.json
data/automation/: last_refresh_summary.json
data/features/: all_match_pre_match_features.csv  match_pre_match_features.csv
data/models/: model_v1.json  model_v1_metrics.json  model_v2.json  model_v2_metrics.json
data/raw/2024-2025/: playermatchstats.csv  players.csv
scripts/: archive_original_data.py  build_phase2_features.py  export_web_dashboard.py  run_refresh_pipeline.py  sync_matches.py  train_phase3_model.py
src/fpl_predictor/: __init__.py  api_backend.py  automation.py  data_archive.py  data_ingestion.py  feature_factory.py  live_inference.py  model_training.py  runtime_assets.py  web_dashboard.py
src/fpl_predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_data_ingestion.py  test_feature_factory.py  test_live_inference.py  test_model_training.py
(+17 files in other folders)
