[project]
name = "fpl-predictor"
version = "0.1.0"
description = "Premier League prediction pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "scikit-learn>=1.5.0",
    "uvicorn>=0.30.0",
    "xgboost>=2.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
